further small improvements on the noisy template (still needs changes in postprocessing to not trim&clip pictures with matplotlib >2.0)

--- a/code-postprocessing/latex-templates/templateNOISYarticle.tex
+++ b/code-postprocessing/latex-templates/templateNOISYarticle.tex
@@ -353,32 +353,32 @@ unsuccessful trial under consideration.
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f104}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f107}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f110}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f113}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f113}\\
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f102}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f105}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f108}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f111}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f114}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f114}\\
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f103}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f106}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f109}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f112}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f115}\\\hline\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f115}\\\hline\\
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f116}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f119}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f122}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f125}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f128}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f128}\\[-1.0ex]
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f117}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f120}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f123}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f126}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f129}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f129}\\[-1.0ex]
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f118}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f121}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f124}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f127}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f130}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f130}\\[-1.0ex]
 \end{tabular}
  \caption{\label{fig:ECDFsingleOne}
 	\bbobecdfcaptionsinglefunctionssingledim{10}
@@ -802,46 +802,46 @@ versus dimension in log-log presentation]{\label{fig:scaling}%
 \begin{tabular}{@{}c@{}*{5}{@{}c@{}}}
  & {\sf 101 Sphere (moderate)} & {\sf 104 Rosenbrock (moderate)} & {\sf 107 Sphere} & {\sf 110 Rosenbrock} & {\sf 113 Step-ellipsoid} \\
 \begin{turn}{90}\parbox{0.175\textwidth}{\centering\sf Gauss noise\vspace{1em}}\end{turn} &
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f101}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f104}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f107}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f110}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f113}\\
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f101}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f104}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f107}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f110}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f113}\\
  & {\sf 102 Sphere (moderate)} & {\sf 105 Rosenbrock (moderate)} & {\sf 108 Sphere} & {\sf 111 Rosenbrock} & {\sf 114 Step-ellipsoid}\\
 \begin{turn}{90}\parbox{0.175\textwidth}{\centering\sf uniform noise\vspace{1em}}\end{turn} &
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f102}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f105}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f108}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f111}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f114}\\
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f102}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f105}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f108}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f111}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f114}\\
  & {\sf 103 Sphere (moderate)} & {\sf 106 Rosenbrock (moderate)} & {\sf 109 Sphere} & {\sf 112 Rosenbrock} & {\sf 115 Step-ellipsoid}\\
 \begin{turn}{90}\parbox{0.175\textwidth}{\centering\sf Cauchy noise\vspace{1em}}\end{turn} &
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f103}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f106}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f109}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f112}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f115}\\\hline
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f103}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f106}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f109}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f112}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f115}\\\hline
  & {\sf 116 Ellipsoid} & {\sf 119 Sum of diff.\ powers} & {\sf 122 Schaffer F7} & {\sf 125 Griewank-Rosenbrock} & {\sf 128 Gallagher}\\
 \begin{turn}{90}\parbox{0.175\textwidth}{\centering\sf Gauss noise\vspace{1em}}\end{turn} &
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f116}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f119}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f122}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f125}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f128}\\
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f116}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f119}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f122}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f125}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f128}\\
  & {\sf 117 Ellipsoid} & {\sf 120 Sum of diff.\ powers} & {\sf 123 Schaffer F7} & {\sf 126 Griewank-Rosenbrock} & {\sf 129 Gallagher}\\
 \begin{turn}{90}\parbox{0.175\textwidth}{\centering\sf uniform noise\vspace{1em}}\end{turn} &
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f117}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f120}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f123}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f126}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f129}\\
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f117}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f120}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f123}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f126}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f129}\\
 & {\sf 118 Ellipsoid} & {\sf 121 Sum of diff.\ powers} & {\sf 124 Schaffer F7} & {\sf 127 Griewank-Rosenbrock} & {\sf 130 Gallagher}\\
 \begin{turn}{90}\parbox{0.175\textwidth}{~\centering\sf Cauchy noise\vspace{1em}}\end{turn} &
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f118}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f121}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f124}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f127}&
-    \includegraphics[height=0.175\textwidth, trim= 36mm 8mm 28mm 12mm, clip]{ppscatter_f130}\\[-1em]
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f118}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f121}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f124}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f127}&
+    \includegraphics[height=0.175\textwidth, trim= 30mm 4mm 28mm 12mm, clip]{ppscatter_f130}\\[-1em]
 \end{tabular}
 \caption{\label{fig:scatterplots}
 \bbobppscatterlegend{$f_{101}$--$f_{130}$} 
