added test for noisy LaTeX template

--- a/code-postprocessing/latex-templates/templateNOISYarticle.tex
+++ b/code-postprocessing/latex-templates/templateNOISYarticle.tex
@@ -1,4 +1,11 @@
 \documentclass[sigconf]{acmart}
+% 
+% LaTeX template for visualizing the performance of
+% optimization algorithms, that were run on the 
+% bbob-noisy test suite of COCO. Any number of 
+% algorithms should work with this template.
+%
+
 
 \usepackage{booktabs} % For formal tables
 \usepackage{graphicx}
