corrected wrong captions wrt Bonferroni correction (now directly written by postprocessing to avoid mistakes), put some text replacement from ppscatter.py to captions.py (not yet finished), cleaned up prepare_ecdfs_figure_caption() and ecdfs_figure_caption() in ppfigs.py, clean-up of preparetexforhtml.py

--- a/code-postprocessing/latex-templates/templateBBOBcmp.tex
+++ b/code-postprocessing/latex-templates/templateBBOBcmp.tex
@@ -520,7 +520,7 @@ of overall function evaluations for any unsuccessful trial under consideration.
 \end{minipage}}
 
 \caption{\label{tab:aRTs}
-\bbobpptablesmanylegend{dimensions $5$ (left) and $20$ (right)}{48}
+\bbobpptablesmanylegend{dimensions $5$ (left) and $20$ (right)}
 }
 \end{table*}
 
