--- a/code-postprocessing/latex-templates/templateBBOBmany.tex
+++ b/code-postprocessing/latex-templates/templateBBOBmany.tex
@@ -427,7 +427,7 @@ ill-conditioned fcts & multi-modal fcts \\
 \end{minipage}}
 
  \caption{\label{tab:aRTs5}
- \bbobpptablesmanylegend{dimension $5$}{110} % Bonferroni correction: #dimensions * #functions
+ \bbobpptablesmanylegend{dimension $5$}
  }
 \end{table*}
 
@@ -500,7 +500,7 @@ ill-conditioned fcts & multi-modal fcts \\
 \end{tabularx}
 \end{minipage}}
  \caption{\label{tab:aRTs20}
-  \bbobpptablesmanylegend{dimension $20$}{110} % Bonferroni correction: #dimensions * #functions
+  \bbobpptablesmanylegend{dimension $20$}
 }
 \end{table*}
 
