--- a/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
+++ b/code-postprocessing/latex-templates/templateBIOBJmultiple.tex
@@ -545,7 +545,7 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 \end{minipage}}
 
  \caption{\label{tab:aRTs5}
- \bbobpptablesmanylegend{dimension $5$}{110} % Bonferroni correction: #dimensions * #functions
+ \bbobpptablesmanylegend{dimension $5$}
  }
 \end{table*}
 %sideways
@@ -699,7 +699,7 @@ multimodal-multimodal & multimodal-weakstructure & weakstructure-weakstructure &
 \end{minipage}}
 
  \caption{\label{tab:aRTs20}
- \bbobpptablesmanylegend{dimension $20$}{110} % Bonferroni correction: #dimensions * #functions
+ \bbobpptablesmanylegend{dimension $20$}
  }
 \end{table*}
 
