--- a/code-postprocessing/latex-templates/templateNOISYarticle.tex
+++ b/code-postprocessing/latex-templates/templateNOISYarticle.tex
@@ -724,7 +724,7 @@ versus dimension in log-log presentation]{\label{fig:scaling}%
 \end{tabularx}
 \end{minipage}}
  \caption{\label{tab:ERTs5}
-\bbobpptablesmanylegend{dimension $5$}{30}
+\bbobpptablesmanylegend{dimension $5$}
 }
 \end{table*}
 
@@ -783,7 +783,7 @@ versus dimension in log-log presentation]{\label{fig:scaling}%
 \end{tabularx}
 \end{minipage}}
  \caption{\label{tab:ERTs20}
- \bbobpptablesmanylegend{dimension $20$}{30}
+ \bbobpptablesmanylegend{dimension $20$}
  }
 \end{table*}
 
@@ -871,44 +871,3 @@ versus dimension in log-log presentation]{\label{fig:scaling}%
 
 
 \end{document}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
