--- a/code-postprocessing/latex-templates/templateNOISYarticle.tex
+++ b/code-postprocessing/latex-templates/templateNOISYarticle.tex
@@ -291,37 +291,38 @@ unsuccessful trial under consideration.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}
-\begin{tabular}{l@{\hspace*{-0.021\textwidth}}l@{\hspace*{-0.021\textwidth}}l@{\hspace*{-0.021\textwidth}}l@{\hspace*{-0.021\textwidth}}l}
-\hspace*{-0.021\textwidth}\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth,]{ppfigdim_f101}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f104}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f107}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f110}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f113}\\
-\hspace*{-0.021\textwidth}\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f102}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f105}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f108}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f111}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f114}\\
-\hspace*{-0.021\textwidth}\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f103}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f106}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f109}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f112}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f115}\\\hline
-\hspace*{-0.021\textwidth}\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f116}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f119}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f122}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f125}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f128}\\
-\hspace*{-0.021\textwidth}\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f117}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f120}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f123}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f126}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f129}\\
-\hspace*{-0.021\textwidth}\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f118}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f121}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f124}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f127}&
-\includegraphics[trim=5mm 0mm 0mm 0mm, clip, width=0.22\textwidth]{ppfigdim_f130}\\
+\centering
+\begin{tabular}{l@{\hspace*{-0.001\textwidth}}l@{\hspace*{-0.001\textwidth}}l@{\hspace*{-0.001\textwidth}}l@{\hspace*{-0.001\textwidth}}l}
+\includegraphics[width=0.2\textwidth,]{ppfigdim_f101}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f104}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f107}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f110}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f113}\\
+\includegraphics[width=0.2\textwidth]{ppfigdim_f102}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f105}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f108}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f111}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f114}\\
+\includegraphics[width=0.2\textwidth]{ppfigdim_f103}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f106}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f109}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f112}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f115}\\\hline
+\includegraphics[width=0.2\textwidth]{ppfigdim_f116}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f119}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f122}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f125}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f128}\\
+\includegraphics[width=0.2\textwidth]{ppfigdim_f117}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f120}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f123}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f126}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f129}\\
+\includegraphics[width=0.2\textwidth]{ppfigdim_f118}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f121}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f124}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f127}&
+\includegraphics[width=0.2\textwidth]{ppfigdim_f130}\\
 \end{tabular}
 \vspace{-1ex}
  \caption{
@@ -339,15 +340,15 @@ unsuccessful trial under consideration.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}
-   \begin{tabular}{@{}c@{}c@{}}
-      {\Large\sffamily moderate noise} & {\Large\sffamily severe noise}\\
-			% trim: left bottom right top
-      \includegraphics[width=0.49\textwidth, trim=0mm 0mm 0mm 12mm, clip]{pprldmany-single-functions/pprldmany_nzmod} & 
-			\includegraphics[width=0.49\textwidth, trim=0mm 0mm 0mm 12mm, clip]{pprldmany-single-functions/pprldmany_nzsev}\\[2em]
-			{\Large\sffamily severe noise multimod.} & {\Large\sffamily all functions}\\
-      \includegraphics[width=0.49\textwidth, trim=0mm 0mm 0mm 12mm, clip]{pprldmany-single-functions/pprldmany_nzsmm} &
-			\includegraphics[width=0.49\textwidth, trim=0mm 0mm 0mm 12mm, clip]{pprldmany-single-functions/pprldmany}
-    \end{tabular}
+	\centering
+	\begin{tabular}{@{}c@{}c@{}}
+		{\Large\sffamily moderate noise} & {\Large\sffamily severe noise}\\
+		\includegraphics[width=0.49\textwidth]{pprldmany-single-functions/pprldmany_nzmod} & 
+		\includegraphics[width=0.49\textwidth]{pprldmany-single-functions/pprldmany_nzsev}\\[0.5em]
+		{\Large\sffamily severe noise multimod.} & {\Large\sffamily all functions}\\
+		\includegraphics[width=0.49\textwidth]{pprldmany-single-functions/pprldmany_nzsmm} &
+		\includegraphics[width=0.49\textwidth]{pprldmany-single-functions/pprldmany}\\[-0.5em]
+	\end{tabular}
 \caption{\label{fig:ECDFs} \bbobecdfcaptionallgroups}
 \end{figure*}
 
@@ -360,40 +361,40 @@ unsuccessful trial under consideration.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}
 \centering
-\begin{tabular}{@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}}
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f101}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f104}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f107}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f110}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f113}\\
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f102}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f105}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f108}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f111}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f114}\\
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f103}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f106}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f109}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f112}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f115}\\\hline\\
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f116}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f119}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f122}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f125}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f128}\\[-1.0ex]
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f117}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f120}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f123}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f126}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f129}\\[-1.0ex]
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f118}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f121}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f124}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f127}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f130}\\[-1.0ex]
+\begin{tabular}{l@{\hspace*{-0.01\textwidth}}l@{\hspace*{-0.01\textwidth}}l@{\hspace*{-0.01\textwidth}}l@{\hspace*{-0.01\textwidth}}l@{\hspace*{-0.01\textwidth}}}
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f101}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f104}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f107}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f110}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f113}\\
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f102}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f105}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f108}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f111}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f114}\\
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f103}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f106}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f109}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f112}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f115}\\\hline\\
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f116}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f119}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f122}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f125}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f128}\\
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f117}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f120}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f123}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f126}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f129}\\
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f118}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f121}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f124}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f127}&
+\includegraphics[width=0.21\textwidth]{pprldmany-single-functions/pprldmany_f130}\\[-1.0ex]
 \end{tabular}
  \caption{\label{fig:ECDFsingleOne}
-	\bbobecdfcaptionsinglefunctionssingledim{10}
+	\bbobecdfcaptionsinglefunctionssingledim{$\!\!$s 2 to 40}
 }
 \end{figure*}
 
@@ -501,11 +502,10 @@ unsuccessful trial under consideration.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centering
-\includegraphics[width=0.24\textwidth, trim=0 0 16mm 12mm, clip]{pplogloss_05D_nzall}%
-\includegraphics[width=0.24\textwidth, trim=7mm 0 9mm 12mm, clip]{pplogloss_20D_nzall}
-\\[-6.2ex]
 \parbox{0.49\columnwidth}{\centering 5-D}%
-\parbox{0.49\columnwidth}{\centering 20-D}\\[5ex]
+\parbox{0.49\columnwidth}{\centering 20-D}\\
+\includegraphics[width=0.24\textwidth]{pplogloss_05D_nzall}%
+\includegraphics[width=0.24\textwidth]{pplogloss_20D_nzall}
 %
 \input{\bbobdatapath\algfolder pploglosstable_05D_nzall}\\
 \input{\bbobdatapath\algfolder pploglosstable_20D_nzall}
@@ -524,19 +524,19 @@ unsuccessful trial under consideration.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \begin{tabular}{@{}l@{}@{}l@{}}
-\multicolumn{1}{c}{$D=5$} & \multicolumn{1}{c}{$D=20$}\\
+\multicolumn{1}{c}{5-D} & \multicolumn{1}{c}{20-D}\\
 \rot{moderate noise}
 \hspace*{-1mm}
-\includegraphics[width=0.24\textwidth, trim=0 0 16mm 12mm, clip]{pplogloss_05D_nzmod} &
-\includegraphics[width=0.24\textwidth, trim=7mm 0 9mm 12mm, clip]{pplogloss_20D_nzmod} \\[-2ex]
-\rot{severe noise}
+\includegraphics[width=0.24\textwidth]{pplogloss_05D_nzmod} &
+\includegraphics[width=0.24\textwidth]{pplogloss_20D_nzmod} \\
+\rot{$\,\,$severe noise}
 \hspace*{-1mm}
-\includegraphics[width=0.24\textwidth, trim=0 0 16mm 12mm, clip]{pplogloss_05D_nzsev} &
-\includegraphics[width=0.24\textwidth, trim=7mm 0 9mm 12mm, clip]{pplogloss_20D_nzsev} \\[-2ex]
+\includegraphics[width=0.24\textwidth]{pplogloss_05D_nzsev} &
+\includegraphics[width=0.24\textwidth]{pplogloss_20D_nzsev} \\
 \rot[0.5]{severe noise multimod.}
 \hspace*{-1mm}
-\includegraphics[width=0.24\textwidth, trim=0 0 16mm 12mm, clip]{pplogloss_05D_nzsmm} &
-\includegraphics[width=0.24\textwidth, trim=7mm 0 9mm 12mm, clip]{pplogloss_20D_nzsmm}
+\includegraphics[width=0.24\textwidth]{pplogloss_05D_nzsmm} &
+\includegraphics[width=0.24\textwidth]{pplogloss_20D_nzsmm}
 \end{tabular}
 \caption{\label{fig:aRTlogloss}%
 \bbobloglossfigurecaption{}
