clean-up of noisy LaTeX template finished for all numbers of algorithms

--- a/code-postprocessing/latex-templates/templateNOISYarticle.tex
+++ b/code-postprocessing/latex-templates/templateNOISYarticle.tex
@@ -562,36 +562,36 @@ unsuccessful trial under consideration.
 \begin{figure*}
 \centering
 \begin{tabular}{@{}c@{}c@{}c@{}c@{}c@{}}
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f101}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f104}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f107}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f110}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f113}\\
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f102}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f105}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f108}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f111}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f114}\\
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f103}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f106}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f109}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f112}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f115}\\
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f116}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f119}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f122}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f125}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f128}\\
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f117}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f120}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f123}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f126}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f129}\\
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f118}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f121}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f124}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f127}&
-\includegraphics[width=0.2\textwidth, trim=12mm 2mm 12mm 2mm, clip]{ppfigs_f130}
+\includegraphics[width=0.2\textwidth]{ppfigs_f101}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f104}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f107}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f110}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f113}\\
+\includegraphics[width=0.2\textwidth]{ppfigs_f102}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f105}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f108}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f111}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f114}\\
+\includegraphics[width=0.2\textwidth]{ppfigs_f103}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f106}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f109}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f112}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f115}\\
+\includegraphics[width=0.2\textwidth]{ppfigs_f116}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f119}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f122}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f125}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f128}\\
+\includegraphics[width=0.2\textwidth]{ppfigs_f117}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f120}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f123}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f126}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f129}\\
+\includegraphics[width=0.2\textwidth]{ppfigs_f118}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f121}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f124}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f127}&
+\includegraphics[width=0.2\textwidth]{ppfigs_f130}
 \end{tabular}
 \caption[Average running time (\aRT) divided by dimension
 versus dimension in log-log presentation]{\label{fig:scaling}%
@@ -611,17 +611,17 @@ versus dimension in log-log presentation]{\label{fig:scaling}%
    \begin{tabular}{@{}c@{}c@{}c@{}}
       \,\, & 5-D & 20-D\\
 			\rot{\Large\sffamily \,\,\,\,\,\,\,\,\,\,all functions}\hspace{1em} &
-			   \includegraphics[height=0.25\textwidth, trim=0mm 0mm 0mm 0mm, clip]{pprldmany_05D_nzall} &
-			   \includegraphics[height=0.25\textwidth, trim=0mm 0mm 0mm 0mm, clip]{pprldmany_20D_nzall}\\[1em]
+			   \includegraphics[height=0.25\textwidth]{pprldmany_05D_nzall} &
+			   \includegraphics[height=0.25\textwidth]{pprldmany_20D_nzall}\\[1em]
 			\rot{\Large\sffamily \,\,\,\,\,moderate noise}\hspace{1em} &
-			   \includegraphics[height=0.25\textwidth, trim=0mm 0mm 0mm 0mm, clip]{pprldmany_05D_nzmod} &
-			   \includegraphics[height=0.25\textwidth, trim=0mm 0mm 0mm 0mm, clip]{pprldmany_20D_nzmod}\\[1em]
+			   \includegraphics[height=0.25\textwidth]{pprldmany_05D_nzmod} &
+			   \includegraphics[height=0.25\textwidth]{pprldmany_20D_nzmod}\\[1em]
 			\rot{\Large\sffamily \,\,\,\,\,\,\,\,\,\,\,severe noise}\hspace{1em} &
-			   \includegraphics[height=0.25\textwidth, trim=0mm 0mm 0mm 0mm, clip]{pprldmany_05D_nzsev} &
-			   \includegraphics[height=0.25\textwidth, trim=0mm 0mm 0mm 0mm, clip]{pprldmany_20D_nzsev}\\[1em]
+			   \includegraphics[height=0.25\textwidth]{pprldmany_05D_nzsev} &
+			   \includegraphics[height=0.25\textwidth]{pprldmany_20D_nzsev}\\[1em]
 			\rot{\Large\sffamily \!\!severe noise multimod.}\hspace{1em} &
-			   \includegraphics[height=0.25\textwidth, trim=0mm 0mm 0mm 0mm, clip]{pprldmany_05D_nzsmm} &
-			   \includegraphics[height=0.25\textwidth, trim=0mm 0mm 0mm 0mm, clip]{pprldmany_20D_nzsmm}
+			   \includegraphics[height=0.25\textwidth]{pprldmany_05D_nzsmm} &
+			   \includegraphics[height=0.25\textwidth]{pprldmany_20D_nzsmm}
     \end{tabular}
 \caption{\label{fig:ECDFs} \bbobECDFslegend{$5$- and $20$}}
 \end{figure*}
@@ -635,32 +635,32 @@ versus dimension in log-log presentation]{\label{fig:scaling}%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}
 \centering
-\begin{tabular}{@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}l@{\hspace*{-0.005\textwidth}}}
+\begin{tabular}{@{}l@{}l@{}l@{}l@{}l@{}}
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f101_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f104_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f107_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f110_10D}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f113_10D}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f113_10D}\\
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f102_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f105_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f108_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f111_10D}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f114_10D}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f114_10D}\\
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f103_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f106_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f109_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f112_10D}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f115_10D}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f115_10D}\\
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f116_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f119_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f122_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f125_10D}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f128_10D}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f128_10D}\\
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f117_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f120_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f123_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f126_10D}&
-\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f129_10D}\\[-1.8ex]
+\includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f129_10D}\\
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f118_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f121_10D}&
 \includegraphics[width=0.2\textwidth]{pprldmany-single-functions/pprldmany_f124_10D}&
