--- a/code-postprocessing/latex-templates/templateBBOBarticle.tex
+++ b/code-postprocessing/latex-templates/templateBBOBarticle.tex
@@ -201,31 +201,31 @@ Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure*}
-\begin{tabular}{l@{\hspace*{-0.025\textwidth}}l@{\hspace*{-0.025\textwidth}}l@{\hspace*{-0.025\textwidth}}l}
-\includegraphics[width=0.266\textwidth]{ppfigdim_f001}&
-\includegraphics[width=0.266\textwidth]{ppfigdim_f002}&
-\includegraphics[width=0.266\textwidth]{ppfigdim_f003}&
-\includegraphics[width=0.266\textwidth]{ppfigdim_f004}\\[-2.1ex]
-\includegraphics[width=0.266\textwidth]{ppfigdim_f005}&
-\includegraphics[width=0.266\textwidth]{ppfigdim_f006}&
-\includegraphics[width=0.266\textwidth]{ppfigdim_f007}&
-\includegraphics[width=0.266\textwidth]{ppfigdim_f008}\\[-2.1ex]
-\includegraphics[width=0.266\textwidth]{ppfigdim_f009}&
-\includegraphics[width=0.266\textwidth]{ppfigdim_f010}&
-\includegraphics[width=0.266\textwidth]{ppfigdim_f011}&
-\includegraphics[width=0.266\textwidth]{ppfigdim_f012}\\[-2.1ex]
-\includegraphics[width=0.266\textwidth]{ppfigdim_f013}&
-\includegraphics[width=0.266\textwidth]{ppfigdim_f014}&
-\includegraphics[width=0.266\textwidth]{ppfigdim_f015}&
-\includegraphics[width=0.266\textwidth]{ppfigdim_f016}\\[-2.1ex]
-\includegraphics[width=0.266\textwidth]{ppfigdim_f017}&
-\includegraphics[width=0.266\textwidth]{ppfigdim_f018}&
-\includegraphics[width=0.266\textwidth]{ppfigdim_f019}&
-\includegraphics[width=0.266\textwidth]{ppfigdim_f020}\\[-2.1ex]
-\includegraphics[width=0.266\textwidth]{ppfigdim_f021}&
-\includegraphics[width=0.266\textwidth]{ppfigdim_f022}&
-\includegraphics[width=0.266\textwidth]{ppfigdim_f023}&
-\includegraphics[width=0.266\textwidth]{ppfigdim_f024}
+\begin{tabular}{l@{\hspace*{-0.0\textwidth}}l@{\hspace*{-0.0\textwidth}}l@{\hspace*{-0.0\textwidth}}l}
+\includegraphics[width=0.24\textwidth]{ppfigdim_f001}&
+\includegraphics[width=0.24\textwidth]{ppfigdim_f002}&
+\includegraphics[width=0.24\textwidth]{ppfigdim_f003}&
+\includegraphics[width=0.24\textwidth]{ppfigdim_f004}\\[-1ex]
+\includegraphics[width=0.24\textwidth]{ppfigdim_f005}&
+\includegraphics[width=0.24\textwidth]{ppfigdim_f006}&
+\includegraphics[width=0.24\textwidth]{ppfigdim_f007}&
+\includegraphics[width=0.24\textwidth]{ppfigdim_f008}\\[-1ex]
+\includegraphics[width=0.24\textwidth]{ppfigdim_f009}&
+\includegraphics[width=0.24\textwidth]{ppfigdim_f010}&
+\includegraphics[width=0.24\textwidth]{ppfigdim_f011}&
+\includegraphics[width=0.24\textwidth]{ppfigdim_f012}\\[-1ex]
+\includegraphics[width=0.24\textwidth]{ppfigdim_f013}&
+\includegraphics[width=0.24\textwidth]{ppfigdim_f014}&
+\includegraphics[width=0.24\textwidth]{ppfigdim_f015}&
+\includegraphics[width=0.24\textwidth]{ppfigdim_f016}\\[-1ex]
+\includegraphics[width=0.24\textwidth]{ppfigdim_f017}&
+\includegraphics[width=0.24\textwidth]{ppfigdim_f018}&
+\includegraphics[width=0.24\textwidth]{ppfigdim_f019}&
+\includegraphics[width=0.24\textwidth]{ppfigdim_f020}\\[-1ex]
+\includegraphics[width=0.24\textwidth]{ppfigdim_f021}&
+\includegraphics[width=0.24\textwidth]{ppfigdim_f022}&
+\includegraphics[width=0.24\textwidth]{ppfigdim_f023}&
+\includegraphics[width=0.24\textwidth]{ppfigdim_f024}
 \end{tabular}
 \vspace{-3ex}
  \caption{\label{fig:aRTgraphs}
@@ -406,42 +406,42 @@ Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \newcommand{\rot}[2][2.5]{
   \hspace*{-3.5\baselineskip}%
-  \begin{rotate}{90}\hspace{#1em}#2
+  \begin{rotate}{90}\hspace*{#1em}#2\vspace{0.5em}
   \end{rotate}}
 \begin{figure*}
-\begin{tabular}{l@{\hspace*{-0.025\textwidth}}l@{\hspace*{-0.00\textwidth}}|l@{\hspace*{-0.025\textwidth}}l}
+\begin{tabular}{l@{\hspace*{-0.00\textwidth}}l@{\hspace*{0.01\textwidth}}|l@{\hspace*{-0.00\textwidth}}l}
 \multicolumn{2}{c}{$D=5$} & \multicolumn{2}{c}{$D=20$}\\[-0.5ex]
-\rot{separable fcts}
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldistr_05D_separ} &
-\includegraphics[width=0.2362\textwidth,trim=2.40cm 0 0 13mm, clip]{ppfvdistr_05D_separ} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldistr_20D_separ} &
-\includegraphics[width=0.2362\textwidth,trim=2.40cm 0 0 13mm, clip]{ppfvdistr_20D_separ} \\[-2ex]
-\rot[1]{misc.\ moderate fcts}
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldistr_05D_lcond} &
-\includegraphics[width=0.2362\textwidth,trim=2.40cm 0 0 13mm, clip]{ppfvdistr_05D_lcond} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldistr_20D_lcond} &
-\includegraphics[width=0.2362\textwidth,trim=2.40cm 0 0 13mm, clip]{ppfvdistr_20D_lcond} \\[-2ex]
-\rot[1.3]{ill-conditioned fcts}
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldistr_05D_hcond} &
-\includegraphics[width=0.2362\textwidth,trim=2.40cm 0 0 13mm, clip]{ppfvdistr_05D_hcond} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldistr_20D_hcond} &
-\includegraphics[width=0.2362\textwidth,trim=2.40cm 0 0 13mm, clip]{ppfvdistr_20D_hcond} \\[-2ex]
-\rot[1.6]{multi-modal fcts}
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldistr_05D_multi} &
-\includegraphics[width=0.2362\textwidth,trim=2.40cm 0 0 13mm, clip]{ppfvdistr_05D_multi} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldistr_20D_multi} &
-\includegraphics[width=0.2362\textwidth,trim=2.40cm 0 0 13mm, clip]{ppfvdistr_20D_multi} \\[-2ex]
-\rot[1.0]{weak structure fcts}
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldistr_05D_mult2} &
-\includegraphics[width=0.2362\textwidth,trim=2.40cm 0 0 13mm, clip]{ppfvdistr_05D_mult2} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldistr_20D_mult2} &
-\includegraphics[width=0.2362\textwidth,trim=2.40cm 0 0 13mm, clip]{ppfvdistr_20D_mult2}\\[-2ex]
-\rot{all functions}
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldistr_05D_noiselessall} &
-\includegraphics[width=0.2362\textwidth,trim=2.40cm 0 0 13mm, clip]{ppfvdistr_05D_noiselessall} &
-\includegraphics[width=0.268\textwidth,trim=0 0 0 13mm, clip]{pprldistr_20D_noiselessall} &
-\includegraphics[width=0.2362\textwidth,trim=2.40cm 0 0 13mm, clip]{ppfvdistr_20D_noiselessall}
-\vspace*{-0.5ex}
+\rot[3]{all functions}
+\includegraphics[width=0.2362\textwidth]{pprldistr_05D_noiselessall} &
+\includegraphics[width=0.2362\textwidth]{ppfvdistr_05D_noiselessall} &
+\includegraphics[width=0.2362\textwidth]{pprldistr_20D_noiselessall} &
+\includegraphics[width=0.2362\textwidth]{ppfvdistr_20D_noiselessall} \\[-0.2em]
+\rot[2.9]{separable fcts}
+\includegraphics[width=0.2362\textwidth]{pprldistr_05D_separ} &
+\includegraphics[width=0.2362\textwidth]{ppfvdistr_05D_separ} &
+\includegraphics[width=0.2362\textwidth]{pprldistr_20D_separ} &
+\includegraphics[width=0.2362\textwidth]{ppfvdistr_20D_separ} \\[-0.2em]
+\rot[1.45]{misc.\ moderate fcts}
+\includegraphics[width=0.2362\textwidth]{pprldistr_05D_lcond} &
+\includegraphics[width=0.2362\textwidth]{ppfvdistr_05D_lcond} &
+\includegraphics[width=0.2362\textwidth]{pprldistr_20D_lcond} &
+\includegraphics[width=0.2362\textwidth]{ppfvdistr_20D_lcond} \\[-0.2em]
+\rot[1.5]{ill-conditioned fcts}
+\includegraphics[width=0.2362\textwidth]{pprldistr_05D_hcond} &
+\includegraphics[width=0.2362\textwidth]{ppfvdistr_05D_hcond} &
+\includegraphics[width=0.2362\textwidth]{pprldistr_20D_hcond} &
+\includegraphics[width=0.2362\textwidth]{ppfvdistr_20D_hcond} \\[-0.2em]
+\rot[2.3]{multi-modal fcts}
+\includegraphics[width=0.2362\textwidth]{pprldistr_05D_multi} &
+\includegraphics[width=0.2362\textwidth]{ppfvdistr_05D_multi} &
+\includegraphics[width=0.2362\textwidth]{pprldistr_20D_multi} &
+\includegraphics[width=0.2362\textwidth]{ppfvdistr_20D_multi} \\[-0.2em]
+\rot[1.7]{weak structure fcts}
+\includegraphics[width=0.2362\textwidth]{pprldistr_05D_mult2} &
+\includegraphics[width=0.2362\textwidth]{ppfvdistr_05D_mult2} &
+\includegraphics[width=0.2362\textwidth]{pprldistr_20D_mult2} &
+\includegraphics[width=0.2362\textwidth]{ppfvdistr_20D_mult2}
+\vspace*{-1ex}
 \end{tabular}
  \caption{\label{fig:RLDs}
  \bbobpprldistrlegend{}
@@ -458,11 +458,10 @@ Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{figure}
 \centering
-\includegraphics[width=0.24\textwidth,trim=0 0 16mm 12mm, clip]{pplogloss_05D_noiselessall}% 
-\includegraphics[width=0.24\textwidth,trim=7mm 0 9mm 12mm, clip]{pplogloss_20D_noiselessall}%
-\\[-6.2ex]
-\parbox{0.49\columnwidth}{\centering 5-D}%
-\parbox{0.49\columnwidth}{\centering 20-D}\\[5ex]
+\parbox{0.48\columnwidth}{\centering 5-D}\hfill
+\parbox{0.48\columnwidth}{\centering 20-D}\\
+\includegraphics[width=0.48\columnwidth]{pplogloss_05D_noiselessall}\hfill
+\includegraphics[width=0.48\columnwidth]{pplogloss_20D_noiselessall}\\[2ex]
 %
 \input{\bbobdatapath\algfolder pploglosstable_05D_noiselessall}\\
 \input{\bbobdatapath\algfolder pploglosstable_20D_noiselessall}
@@ -483,26 +482,26 @@ Tables~\ref{tab:aRTs}. The experiments were performed with COCO \cite{hansen2016
 \multicolumn{1}{c}{5-D} & \multicolumn{1}{c}{20-D}\\
 %\rot{all functions}
 %\hspace*{-2mm}
-\rot{separable fcts}
+\rot[2.8]{separable fcts}
 \hspace*{-1.4mm}
-\includegraphics[width=0.24\textwidth,trim=0 0 16mm 12mm, clip]{pplogloss_05D_separ} &
-\includegraphics[width=0.24\textwidth,trim=7mm 0 9mm 12mm, clip]{pplogloss_20D_separ}\\[-2ex]
-\rot[2]{moderate fcts}
+\includegraphics[width=0.24\textwidth]{pplogloss_05D_separ} &
+\includegraphics[width=0.24\textwidth]{pplogloss_20D_separ}\\
+\rot[2.7]{moderate fcts}
 \hspace*{-1.4mm}
-\includegraphics[width=0.24\textwidth,trim=0 0 16mm 12mm, clip]{pplogloss_05D_lcond} &
-\includegraphics[width=0.24\textwidth,trim=7mm 0 9mm 12mm, clip]{pplogloss_20D_lcond}\\[-2ex]
-\rot[1.3]{ill-conditioned fcts}
+\includegraphics[width=0.24\textwidth]{pplogloss_05D_lcond} &
+\includegraphics[width=0.24\textwidth]{pplogloss_20D_lcond}\\
+\rot[1.9]{ill-conditioned fcts}
+\hspace*{-1.35mm}
+\includegraphics[width=0.24\textwidth]{pplogloss_05D_hcond} &
+\includegraphics[width=0.24\textwidth]{pplogloss_20D_hcond}\\
+\rot[2.5]{multi-modal fcts}
+\hspace*{-1.3mm}
+\includegraphics[width=0.24\textwidth]{pplogloss_05D_multi} &
+\includegraphics[width=0.24\textwidth]{pplogloss_20D_multi}\\
+\rot[1.6]{weak structure fcts}
 \hspace*{-1.4mm}
-\includegraphics[width=0.24\textwidth,trim=0 0 16mm 12mm, clip]{pplogloss_05D_hcond} &
-\includegraphics[width=0.24\textwidth,trim=7mm 0 9mm 12mm, clip]{pplogloss_20D_hcond}\\[-2ex]
-\rot[1.6]{multi-modal fcts}
-\hspace*{-1.4mm}
-\includegraphics[width=0.24\textwidth,trim=0 0 16mm 12mm, clip]{pplogloss_05D_multi} &
-\includegraphics[width=0.24\textwidth,trim=7mm 0 9mm 12mm, clip]{pplogloss_20D_multi}\\[-2ex]
-\rot[1.0]{weak structure fcts}
-\hspace*{-1.4mm}
-\includegraphics[width=0.24\textwidth,trim=0 0 16mm 12mm, clip]{pplogloss_05D_mult2} &
-\includegraphics[width=0.24\textwidth,trim=7mm 0 9mm 12mm, clip]{pplogloss_20D_mult2}
+\includegraphics[width=0.24\textwidth]{pplogloss_05D_mult2} &
+\includegraphics[width=0.24\textwidth]{pplogloss_20D_mult2}
 \vspace*{-0.5ex}
 \end{tabular}
  \caption{\label{fig:aRTlogloss}%
